# biohelpers_python

./: .PRJNA510920.meta.txt  .gitignore  README.md  gene_info.csv  pyproject.toml  run_hisat2.sh  setup.cfg  test.ipynb  test.py  test.vcf.txt
src/biohelpers/: __init__.py  clean_fasta.py  gbff_to_gff.py  get_gene_info.py  get_hap.py  parse_longest_mrna.py  process_blast_result.py  run_augustus_train.py  run_hisat2.py  run_rnaseq.py
