[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2", "cython"] # 如果你的包需要Cython来构建，就加上它
build-backend = "setuptools.build_meta"

[project]
name = "biohelpers"
dynamic = ["version"]

[tool.setuptools_scm]
# 如果需要，可以在这里配置 setuptools_scm
# 例如，将版本号写入一个文件，以便在运行时访问
# write_to = "src/biohelpers/_version.py"