[metadata]
name = biohelpers # 建议在这里也明确指定包名
version = attr: biohelpers._version.__version__ # 如果用了 write_to，可以这样配置
# 或者，如果用了 pyproject.toml 的 dynamic，这行可以不写，setuptools会自动处理
author = Xiang Li
author_email = lixiang117423@gmail.com
description = Useful function for biologist
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lixiang117423/biohelpers_python
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Bio-Informatics
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    
keywords = bioinformatics, genome-analysis # 建议用逗号分隔

[options]
package_dir =
    = src
packages = find:
install_requires =
    Biopython>=1.81
    PyVCF  # <-- 已修改
    numpy
    pandas
    concurrent-log-handler
# Cython 已移除，因为它更可能是构建时依赖

[options.entry_points]
console_scripts =
    parse_longest_mrna = biohelpers.parse_longest_mrna:main
    download_hmm = biohelpers.download_hmm:main
    get_fq_file = biohelpers.get_fq_file_from_ena:main
    get_fq_meta = biohelpers.get_fq_meta_from_ena:main
    process_blast = biohelpers.process_blast_result:main
    run_hisat2 = biohelpers.run_hisat2:main
    get_hap = biohelpers.get_hap:main
    get_gene_pairs = biohelpers.get_gene_pairs:main
    get_cov = biohelpers.get_cov:main
    new_gff_braker = biohelpers.new_gff_braker:main
    stat_vcf = biohelpers.stat_vcf:main
    run_fastp = biohelpers.run_fastp:main
    run_rnaseq = biohelpers.run_rnaseq:main
    clean_fasta = biohelpers.clean_fasta:main
    get_gene_info = biohelpers.get_gene_info:main